--- a/css/style.css
+++ b/css/style.css
@@ -7,129 +7,135 @@ footer {
     display: block;
 }
 
-/*.left,*/
-/*.content {*/
-/*    position: absolute;*/
-/*    overflow: auto;*/
-/*    padding: 10px;*/
+.container  {
+  background-color: #0B6256;
+}
+/*.container- {*/
+/*  background-color: #0B6256;*/
 /*}*/
 
-/*.header {*/
-/*    height: 80px;*/
-/*    background-color: bisque;*/
-/*    border-bottom: 2px solid #7b5427;*/
+/*<uniquifier>: Use a unique and descriptive class name*/
+/*<weight>: Use a value from 200 to 700
+ExtraLight 200 Light 300 Regular 400 Medium 500 SemiBold 600 Bold 700*/
+/* */
+/*.oswald-container {*/
+/*  font-family: "Oswald", sans-serif;*/
+/*  font-optical-sizing: auto;*/
+/*  font-weight:400;*/
+/*  font-style: normal;*/
 /*}*/
 
-/*.header h1 {*/
-/*    margin: 0;*/
-/*    padding: 20px;*/
-/*    text-align: center;*/
-/*    font-family: Arial, Helvetica, sans-serif;*/
-/*    font-size: 24pt;*/
-/*}*/
+.montserrat-container {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 
-/*.content {*/
-/*    top: 82px;*/
-/*    left: 180px;*/
-/*    bottom: 0;*/
-/*    right: 0;*/
-/*}*/
+.montserrat-alternates-thin {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
 
-/*.left {*/
-/*    width: 150px;*/
-/*    background-color: #ecf5e4;*/
-/*    border-right: 1px solid #231f20;*/
-/*}*/
+.montserrat-alternates-extralight {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
 
-/*footer {*/
-/*    position: absolute;*/
-/*    bottom: 0;*/
-/*    right: 0;*/
-/*    left: 0;*/
-/*    text-align: center;*/
-/*    padding: 20px;*/
-/*    background-color: blanchedalmond;*/
-/*}*/
+.montserrat-alternates-light {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
 
-/*.block {*/
-/*    background-color: azure;*/
-/*    position: relative;*/
-/*    top: 20px;*/
-/*    left: 50px;*/
-/*}*/
+.montserrat-alternates-regular {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
-/*.menu{*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    text-align: center;*/
-/*    !* border: 2px solid #0066ff; *!*/
-/*    background-color: #33adff;*/
-/*}*/
+.montserrat-alternates-medium {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
 
-/*.menu a {*/
-/*    background-color: #ecf5e4;*/
-/*    color: #777;*/
-/*    font-weight: 400;*/
-/*    !* border-left: 5px solid #33adff; *!*/
-/*    display: inline-block;*/
-/*    padding: 5px 10px;*/
-/*    width: 100px;*/
-/*    !* border-bottom: 1px solid #231f20; *!*/
-/*}*/
+.montserrat-alternates-semibold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
 
-/*.menu li {*/
-/*    padding: 1px;*/
-/*    display: inline;*/
-/*}*/
+.montserrat-alternates-bold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
 
-/*.menu a:hover {*/
-/*    background-color: yellow;*/
-/*    color: red;*/
-/*    border-left: 1px solid #3333ff;*/
-/*}*/
+.montserrat-alternates-extrabold {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
 
-/*.container {*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    border: 2px solid blue;*/
-/*}*/
+.montserrat-alternates-black {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
 
-/*.content-block {*/
-/*    background-color: #c92929;*/
-/*}*/
+.montserrat-alternates-thin-italic {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+}
 
-/*.content-block-auto {*/
-/*    width: 200px;*/
-/*    background-color: #abfbf3;*/
-/*    margin-left: auto;*/
-/*    margin-right: auto;*/
-/*    text-align: center;*/
-/*}*/
+.montserrat-alternates-extralight-italic {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 200;
+  font-style: italic;
+}
 
-/*.container-inline {*/
-/*    text-align: center;*/
-/*    border: 2px solid blue;*/
-/*}*/
+.montserrat-alternates-light-italic {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
 
-/*.content-inline-block {*/
-/*    display: inline-block;*/
-/*    border: 2px solid red;*/
-/*}*/
+.montserrat-alternates-regular-italic {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
 
-/*.rounded {*/
-/*    border: 2px solid #fff;*/
-/*    border-radius: 10px;*/
-/*    box-shadow: 2px 1px 5px #999;*/
-/*}*/
+.montserrat-alternates-medium-italic {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+}
 
-/*.on-bg {*/
-/*    !* background-image: url("../images/fon.jpg"); *!*/
-/*    height: 200px;*/
-/*    background-color: rgba(255, 128, 64, .99);*/
-/*    !* background-repeat: repeat-x; *!*/
-/*}*/
+.montserrat-alternates-semibold-italic {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+}
 
-/*.on-gradient {*/
-/*    background: linear-gradient(to right, #abfbf3, #fff);*/
-/*    height: 200px;*/
-/*}*/
+.montserrat-alternates-bold-italic {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.montserrat-alternates-extrabold-italic {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 800;
+  font-style: italic;
+}
+
+.montserrat-alternates-black-italic {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 900;
+  font-style: italic;
+}
