--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,7 @@ footer {
     display: block;
 }
 
-.container  {
-  background-color: #0B6256;
-}
+.container
 /*.container- {*/
 /*  background-color: #0B6256;*/
 /*}*/
