--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@ footer {
     display: block;
 }
 
-.container
+body {
+  background-color: #0B6256;;
+  }
 /*.container- {*/
 /*  background-color: #0B6256;*/
 /*}*/
