--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,10 @@ footer {
 
 body {
   background-color: #0B6256;;
-  }
+   }
+.nav_flag {
+  background-color: #08413A;
+}
 /*.container- {*/
 /*  background-color: #0B6256;*/
 /*}*/
