--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,23 @@ footer {
 body {
   background-color: #0B6256;;
    }
+
 .nav_flag {
   background-color: #08413A;
 }
+h2{
+  color: #F8FAA7;
+
+}
+.col-centered{
+   float: none;
+   margin: 0 auto;
+}
+
+/*.slide {*/
+/* color: #08413A;*/
+/*  */
+/*}*/
 /*.container- {*/
 /*  background-color: #0B6256;*/
 /*}*/
