--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ nav,
 article,
 aside,
 footer {
-    display: flex;
+    display: block;
 }
 
 body {
@@ -15,7 +15,7 @@ body {
   background-color: #08413A;
 }
 
-h1, h2 {
+h1, h2, h3 {
   /*text-decoration-color: #F8FAA7;*/
   color: #F8FAA7;
   align-items: center;
@@ -40,7 +40,26 @@ nav {
 }
 .offcanvasDarkNavbar2 {
   color: #78E100;
-  background-color: rgba(8,65,58, .95);
+  background-color: rgba(8,65,58, .90);
+}
+.titul{
+  font-weight:200;
+  font-size: 2.7em;
+  color: #78E100
+}
+.titul_2{
+  font-size: 3.8em;
+  color: #08413A;
+}
+.titul_3 {
+  background-color: #78E100;
+  color: #0F8273;
+  border: #F8FAA7;
+  /*border-radius: .1em;*/
+  font-size: 1em;
+  padding: 1em;
+  /*border-radius: inherit;*/
+
 }
 /*.slide {*/
 /* color: #08413A;*/
@@ -54,12 +73,12 @@ nav {
 /*<weight>: Use a value from 200 to 700
 ExtraLight 200 Light 300 Regular 400 Medium 500 SemiBold 600 Bold 700*/
 /* */
-/*.oswald-container {*/
-/*  font-family: "Oswald", sans-serif;*/
-/*  font-optical-sizing: auto;*/
-/*  font-weight:400;*/
-/*  font-style: normal;*/
-/*}*/
+.oswald-container {
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight:700;
+  font-style: normal;
+}
 
 .montserrat-container {
   font-family: "Montserrat", sans-serif;
