--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,15 @@ nav {
 .titul{
   font-weight:200;
   /*font-size: 2.7em;*/
-  font-size: 1.2em;
-  color: #78E100
+  font-size: 1.5em;
+  color: #78E100;
+  padding: .3em;
 }
 .titul_2{
   /*font-size: 3.8em;*/
-  /*font-size: 1.0em;*/
+  font-size: 2.2em;
   color: #08413A;
+  padding: .3em;
 }
 /*.titul_3 {*/
 /*  background-color: #78E100;*/
