--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ nav {
   color: #08413A;
   padding: .3em;
 }
+.carusel{
+  color: #78E100;
+  font-weight: 700;
+}
 /*.titul_3 {*/
 /*  background-color: #78E100;*/
 /*  color: #0F8273;*/
